--- a/index.html
+++ b/index.html
@@ -7,35 +7,44 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
+  <article class="article">
+    <div class="hero">
+      <h1 class="title">Learn to code by watching others</h1>
+      <p class="text">
+        See how experienced developers solve problems in real-time. 
+        Watching scripted tutorial is greate, but understanding how developers think is invaluable.
+      </p>
+    </div> 
+    <div class="main">
+      <div class="free-trial">
+        <p class="free-trial-text">
+          <span class="try">Try it free 7 days</span> then
+        </p>
+        <p class="free-trial-cost">
+          $20/mo. thereafter
+        </p>
+      </div>
+      <div class="form">
+        <form action="#">
+          <input type="text" placeholder="Frist Name">
+          <input type="text" placeholder="Last Name">
+          <input type="email" placeholder="Email Address">
+          <input type="password" placeholder="Password">
+          <button type="submit">claim your free trial</button>
+        </form>
+        <p class="terms">
+          By clicking the button you are agreeing to our <span class="terms-services">Terms and Services</span>
+        </p>
+      </div>
+      <div class="form"></div>
+    </div>
+  </article>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="htpps://github.com/fayiz770">Mohammad Waris Fayiz</a>.
     </p>
   </footer>
 </body>
